Amend sample-master.cfg to set up default ports

--- a/sample-master.cfg
+++ b/sample-master.cfg
@@ -12,3 +12,21 @@ from buildbot.plugins import *
 # This is the dictionary that the buildmaster pays attention to. We also use
 # a shorter alias to save typing.
 c = BuildmasterConfig = {}
+
+# 'protocols' contains information about protocols which master will use for
+# communicating with workers. You must define at least 'port' option that workers
+# could connect to your master with this protocol.
+# 'port' must match the value configured into the workers (with their
+# --master option)
+c['protocols'] = {'pb': {'port': 9989}}
+
+# the 'buildbotURL' string should point to the location where the buildbot's
+# internal web server is visible. This typically uses the port number set in
+# the 'www' entry below, but with an externally-visible host name which the
+# buildbot cannot figure out without some help.
+
+c['buildbotURL'] = "http://localhost:8020/"
+
+# minimalistic config to activate new web UI
+c['www'] = dict(port=8020,
+                plugins=dict(waterfall_view={}, console_view={}, grid_view={}))
