Add enough sample info to make it run out of the box

--- a/sample-master.cfg
+++ b/sample-master.cfg
@@ -13,6 +13,26 @@ from buildbot.plugins import *
 # a shorter alias to save typing.
 c = BuildmasterConfig = {}
 
+# Sample config has a dummy worker
+c['workers'] = [worker.Worker("example-worker", "123")]
+
+# Sample builder
+factory = util.BuildFactory()
+factory.addStep(steps.Git(repourl='git://github.com/buildbot/hello-world.git', mode='incremental'))
+factory.addStep(steps.ShellCommand(command=["trial", "hello"],
+                                   env={"PYTHONPATH": "."}))
+
+c['builders'] = []
+c['builders'].append(
+    util.BuilderConfig(name="runtests",
+      workernames=["example-worker"],
+      factory=factory))
+
+# Sample scheduler
+c['schedulers'] = [schedulers.ForceScheduler(
+                            name="force",
+                            builderNames=["runtests"])]
+
 # 'protocols' contains information about protocols which master will use for
 # communicating with workers. You must define at least 'port' option that workers
 # could connect to your master with this protocol.
