Parametrize sample master configuration

--- a/sample-master.cfg
+++ b/sample-master.cfg
@@ -5,6 +5,11 @@
 # Use the `./generate_config` script to generate a more useful one.
 
 from buildbot.plugins import *
+import os
+
+# Pull some environment variables
+BUILDBOT_ADMIN_PORT = int(os.environ["BUILDBOT_ADMIN_PORT"])
+BUILDBOT_COMMS_PORT = int(os.environ["BUILDBOT_COMMS_PORT"])
 
 # This is a sample buildmaster config file. It must be installed as
 # 'master.cfg' in your buildmaster's base directory.
@@ -38,15 +43,15 @@ c['schedulers'] = [schedulers.ForceScheduler(
 # could connect to your master with this protocol.
 # 'port' must match the value configured into the workers (with their
 # --master option)
-c['protocols'] = {'pb': {'port': 9989}}
+c['protocols'] = {'pb': {'port': BUILDBOT_COMMS_PORT}}
 
 # the 'buildbotURL' string should point to the location where the buildbot's
 # internal web server is visible. This typically uses the port number set in
 # the 'www' entry below, but with an externally-visible host name which the
 # buildbot cannot figure out without some help.
 
-c['buildbotURL'] = "http://localhost:8020/"
+c['buildbotURL'] = "http://localhost:{port}/".format(port=BUILDBOT_ADMIN_PORT)
 
 # minimalistic config to activate new web UI
-c['www'] = dict(port=8020,
+c['www'] = dict(port=BUILDBOT_ADMIN_PORT,
                 plugins=dict(waterfall_view={}, console_view={}, grid_view={}))
