Parametrize worker name

--- a/sample-master.cfg
+++ b/sample-master.cfg
@@ -19,7 +19,8 @@ BUILDBOT_COMMS_PORT = int(os.environ["BUILDBOT_COMMS_PORT"])
 c = BuildmasterConfig = {}
 
 # Sample config has a dummy worker
-c['workers'] = [worker.Worker("example-worker", "123")]
+sample_worker_name = "exampleworker"
+c['workers'] = [worker.Worker(sample_worker_name, "password123456")]
 
 # Sample builder
 factory = util.BuildFactory()
@@ -30,7 +31,7 @@ factory.addStep(steps.ShellCommand(command=["trial", "hello"],
 c['builders'] = []
 c['builders'].append(
     util.BuilderConfig(name="runtests",
-      workernames=["example-worker"],
+      workernames=[sample_worker_name],
       factory=factory))
 
 # Sample scheduler
