Clean up sample-master.cfg

--- a/sample-master.cfg
+++ b/sample-master.cfg
@@ -11,9 +11,6 @@ import os
 BUILDBOT_ADMIN_PORT = int(os.environ["BUILDBOT_ADMIN_PORT"])
 BUILDBOT_COMMS_PORT = int(os.environ["BUILDBOT_COMMS_PORT"])
 
-# This is a sample buildmaster config file. It must be installed as
-# 'master.cfg' in your buildmaster's base directory.
-
 # This is the dictionary that the buildmaster pays attention to. We also use
 # a shorter alias to save typing.
 c = BuildmasterConfig = {}
@@ -39,20 +36,10 @@ c['schedulers'] = [schedulers.ForceScheduler(
                             name="force",
                             builderNames=["runtests"])]
 
-# 'protocols' contains information about protocols which master will use for
-# communicating with workers. You must define at least 'port' option that workers
-# could connect to your master with this protocol.
-# 'port' must match the value configured into the workers (with their
-# --master option)
+# Add buildbot communication port
 c['protocols'] = {'pb': {'port': BUILDBOT_COMMS_PORT}}
 
-# the 'buildbotURL' string should point to the location where the buildbot's
-# internal web server is visible. This typically uses the port number set in
-# the 'www' entry below, but with an externally-visible host name which the
-# buildbot cannot figure out without some help.
-
-c['buildbotURL'] = "http://localhost:{port}/".format(port=BUILDBOT_ADMIN_PORT)
-
 # minimalistic config to activate new web UI
+c['buildbotURL'] = "http://localhost:{port}/".format(port=BUILDBOT_ADMIN_PORT)
 c['www'] = dict(port=BUILDBOT_ADMIN_PORT,
                 plugins=dict(waterfall_view={}, console_view={}, grid_view={}))
