add workers nicely

--- a/master.cfg
+++ b/master.cfg
@@ -6,16 +6,27 @@ c = BuildmasterConfig = {}
 BUILDBOT_ADMIN_PORT = int(os.environ['BUILDBOT_ADMIN_PORT'])
 BUILDBOT_COMMS_PORT = int(os.environ['BUILDBOT_COMMS_PORT'])
 
-#______________________________________________________________________
-c['workers'] = [ \
-    worker.Worker('worker1', 'password'), \
-    worker.Worker('worker2', 'password'), \
-    worker.Worker('worker3', 'password'), \
-    worker.Worker('worker4', 'password') \
-]
-all_workers = ['worker1', 'worker2', 'worker3', 'worker4']
+c['buildbotNetUsageData'] = None
 
-#______________________________________________________________________
+#----------------------------------------------------------------------
+# setup workers
+#----------------------------------------------------------------------
+worker_sets = [
+    ['chipyard-worker-1', 'password'],
+    ['chipyard-worker-2', 'password'],
+    ['chipyard-worker-3', 'password'],
+    ['chipyard-worker-4', 'password']]
+
+worker_names = []
+for w in worker_sets:
+    worker_names.append(w[0])
+
+c['workers'] = []
+for w in worker_sets:
+    print("Adding \"" + w[0] + "\" with password \"" + w[1] + "\"")
+    c['workers'].append(worker.Worker(w[0], w[1]))
+
+#----------------------------------------------------------------------
 checkout = steps.Git(repourl='git://github.com/ucb-bar/project-template.git', mode='incremental')
 
 # setup the steps to run
@@ -104,31 +115,31 @@ example_test_f = util.BuildFactory()
 example_test_f.addStep(checkout)
 
 c['builders'] = [ \
-    util.BuilderConfig(name='Spawn Jobs', factory=spawner_f, workernames=all_workers), \
+    util.BuilderConfig(name='Spawn Jobs', factory=spawner_f, workernames=worker_names), \
 
-    util.BuilderConfig(name='Build RISC-V Tools', factory=rvtools_f, workernames=all_workers), \
-    util.BuilderConfig(name='Build Verilator', factory=verilator_f, workernames=all_workers), \
-    util.BuilderConfig(name='Build ESP Tools', factory=esp_tools_f, workernames=all_workers), \
+    util.BuilderConfig(name='Build RISC-V Tools', factory=rvtools_f, workernames=worker_names), \
+    util.BuilderConfig(name='Build Verilator', factory=verilator_f, workernames=worker_names), \
+    util.BuilderConfig(name='Build ESP Tools', factory=esp_tools_f, workernames=worker_names), \
 
-    util.BuilderConfig(name='Spawn Prepare Steps', factory=prep_spawn_f, workernames=all_workers), \
+    util.BuilderConfig(name='Spawn Prepare Steps', factory=prep_spawn_f, workernames=worker_names), \
 
-    util.BuilderConfig(name='Prep. Hwacha', factory=prep_hwacha_f, workernames=all_workers), \
-    util.BuilderConfig(name='Prep. BOOM', factory=prep_boom_f, workernames=all_workers), \
-    util.BuilderConfig(name='Prep. BOOM Example', factory=prep_boomexample_f, workernames=all_workers), \
-    util.BuilderConfig(name='Prep. BOOM/Rocket Example', factory=prep_boomrocketexample_f, workernames=all_workers), \
-    util.BuilderConfig(name='Prep. Rocket Chip', factory=prep_rocketchip_f, workernames=all_workers), \
-    util.BuilderConfig(name='Prep. Example', factory=prep_example_f, workernames=all_workers), \
+    util.BuilderConfig(name='Prep. Hwacha', factory=prep_hwacha_f, workernames=worker_names), \
+    util.BuilderConfig(name='Prep. BOOM', factory=prep_boom_f, workernames=worker_names), \
+    util.BuilderConfig(name='Prep. BOOM Example', factory=prep_boomexample_f, workernames=worker_names), \
+    util.BuilderConfig(name='Prep. BOOM/Rocket Example', factory=prep_boomrocketexample_f, workernames=worker_names), \
+    util.BuilderConfig(name='Prep. Rocket Chip', factory=prep_rocketchip_f, workernames=worker_names), \
+    util.BuilderConfig(name='Prep. Example', factory=prep_example_f, workernames=worker_names), \
 
-    util.BuilderConfig(name='Hwacha Tests', factory=hwacha_test_f, workernames=all_workers), \
-    util.BuilderConfig(name='BOOM Tests', factory=boom_test_f, workernames=all_workers), \
-    util.BuilderConfig(name='BOOM Example Tests', factory=boomexample_test_f, workernames=all_workers), \
-    util.BuilderConfig(name='BOOM/Rocket Tests', factory=boomrocketexample_test_f, workernames=all_workers), \
-    util.BuilderConfig(name='Rocket Chip Tests', factory=rocketchip_test_f, workernames=all_workers), \
-    util.BuilderConfig(name='Example Tests', factory=example_test_f, workernames=all_workers), \
+    util.BuilderConfig(name='Hwacha Tests', factory=hwacha_test_f, workernames=worker_names), \
+    util.BuilderConfig(name='BOOM Tests', factory=boom_test_f, workernames=worker_names), \
+    util.BuilderConfig(name='BOOM Example Tests', factory=boomexample_test_f, workernames=worker_names), \
+    util.BuilderConfig(name='BOOM/Rocket Tests', factory=boomrocketexample_test_f, workernames=worker_names), \
+    util.BuilderConfig(name='Rocket Chip Tests', factory=rocketchip_test_f, workernames=worker_names), \
+    util.BuilderConfig(name='Example Tests', factory=example_test_f, workernames=worker_names), \
 ]
 
 
-#______________________________________________________________________
+#----------------------------------------------------------------------
 spawner = schedulers.AnyBranchScheduler( \
     name='spawner', \
     builderNames=['Spawn Jobs'], \
@@ -159,13 +170,13 @@ c['schedulers'] = [
     rocketchip_test_s,
     example_test_s]
 
-#______________________________________________________________________
+#----------------------------------------------------------------------
 c['protocols'] = {'pb': {'port': BUILDBOT_COMMS_PORT}}
 
-#______________________________________________________________________
+#----------------------------------------------------------------------
 c['buildbotURL'] = f'http://localhost:{BUILDBOT_ADMIN_PORT}/'
 
-#______________________________________________________________________
+#----------------------------------------------------------------------
 c['www'] = dict(port=BUILDBOT_ADMIN_PORT, \
                 plugins=dict( \
                     waterfall_view={True}, \
