rename to BB | misc updates

--- a/master.cfg
+++ b/master.cfg
@@ -3,8 +3,8 @@ import os
 
 c = BuildmasterConfig = {}
 
-BUILDBOT_ADMIN_PORT = int(os.environ['BUILDBOT_ADMIN_PORT'])
-BUILDBOT_COMMS_PORT = int(os.environ['BUILDBOT_COMMS_PORT'])
+BB_ADMIN_PORT = int(os.environ['BB_ADMIN_PORT'])
+BB_COMMS_PORT = int(os.environ['BB_COMMS_PORT'])
 
 c['buildbotNetUsageData'] = None
 
@@ -28,6 +28,13 @@ for w in worker_sets:
 
 #----------------------------------------------------------------------
 checkout = steps.Git(repourl='git://github.com/ucb-bar/project-template.git', mode='incremental')
+
+# checkout files and get the cached riscv-tools and verilator
+def setup(f):
+    f.addStep(checkout)
+    f.addStep(steps.ShellCommand(command=['./circleci/create-hash.sh']))
+    f.addStep(steps.ShellCommand(command=['./circleci/get-riscv-tools.sh']))
+    f.addStep(steps.ShellCommand(command=['./circleci/get-verilator.sh']))
 
 # setup the steps to run
 spawner_f = util.BuildFactory()
@@ -63,31 +70,37 @@ prep_spawn_f.addStep(steps.Trigger(schedulerNames=['prep_example'], waitForFinis
 prep_hwacha_s = schedulers.Triggerable(name='prep_hwacha', builderNames=['Prep. Hwacha'])
 prep_hwacha_f = util.BuildFactory()
 prep_hwacha_f.addStep(checkout)
+setup(prep_hwacha_f)
 prep_hwacha_f.addStep(steps.Trigger(schedulerNames=['hwacha_test'], waitForFinish=False))
 
 prep_boom_s = schedulers.Triggerable(name='prep_boom', builderNames=['Prep. BOOM'])
 prep_boom_f = util.BuildFactory()
 prep_boom_f.addStep(checkout)
+setup(prep_hwacha_f)
 prep_boom_f.addStep(steps.Trigger(schedulerNames=['boom_test'], waitForFinish=False))
 
 prep_boomexample_s = schedulers.Triggerable(name='prep_boomexample', builderNames=['Prep. BOOM Example'])
 prep_boomexample_f = util.BuildFactory()
 prep_boomexample_f.addStep(checkout)
+setup(prep_hwacha_f)
 prep_boomexample_f.addStep(steps.Trigger(schedulerNames=['boomexample_test'], waitForFinish=False))
 
 prep_boomrocketexample_s = schedulers.Triggerable(name='prep_boomrocketexample', builderNames=['Prep. BOOM/Rocket Example'])
 prep_boomrocketexample_f = util.BuildFactory()
 prep_boomrocketexample_f.addStep(checkout)
+setup(prep_hwacha_f)
 prep_boomrocketexample_f.addStep(steps.Trigger(schedulerNames=['boomrocketexample_test'], waitForFinish=False))
 
 prep_rocketchip_s = schedulers.Triggerable(name='prep_rocketchip', builderNames=['Prep. Rocket Chip'])
 prep_rocketchip_f = util.BuildFactory()
 prep_rocketchip_f.addStep(checkout)
+setup(prep_hwacha_f)
 prep_rocketchip_f.addStep(steps.Trigger(schedulerNames=['rocketchip_test'], waitForFinish=False))
 
 prep_example_s = schedulers.Triggerable(name='prep_example', builderNames=['Prep. Example'])
 prep_example_f = util.BuildFactory()
 prep_example_f.addStep(checkout)
+setup(prep_hwacha_f)
 prep_example_f.addStep(steps.Trigger(schedulerNames=['example_test'], waitForFinish=False))
 
 hwacha_test_s = schedulers.Triggerable(name='hwacha_test', builderNames=['Hwacha Tests'])
@@ -171,13 +184,13 @@ c['schedulers'] = [
     example_test_s]
 
 #----------------------------------------------------------------------
-c['protocols'] = {'pb': {'port': BUILDBOT_COMMS_PORT}}
+c['protocols'] = {'pb': {'port': BB_COMMS_PORT}}
 
 #----------------------------------------------------------------------
-c['buildbotURL'] = f'http://localhost:{BUILDBOT_ADMIN_PORT}/'
+c['buildbotURL'] = f'http://localhost:{BB_ADMIN_PORT}/'
 
 #----------------------------------------------------------------------
-c['www'] = dict(port=BUILDBOT_ADMIN_PORT, \
+c['www'] = dict(port=BB_ADMIN_PORT, \
                 plugins=dict( \
                     waterfall_view={True}, \
                     console_view={True}, \
