--- a/master.cfg
+++ b/master.cfg
@@ -46,17 +46,17 @@ spawner_f.addStep(steps.Trigger(schedulerNames=['prep_spawn'], waitForFinish=Tru
 rvtools_s = schedulers.Triggerable(name='rvtools', builderNames=['Build RISC-V Tools'])
 rvtools_f = util.BuildFactory()
 rvtools_f.addStep(checkout)
-rvtools_f.addStep(steps.ShellCommand(command=["ls", "-alh", "/var/log"]))
-rvtools_f.addStep(steps.ShellCommand(command=["ls", "-alh", "/var/log/container-data"]))
-rvtools_f.addStep(steps.ShellCommand(command=["touch", "/var/log/container-data/THIS_WORKS"]))
+rvtools_f.addStep(steps.ShellCommand(command=['.circleci/build-toolchains.sh', 'riscv-tools']))
 
 verilator_s = schedulers.Triggerable(name='verilator', builderNames=['Build Verilator'])
 verilator_f = util.BuildFactory()
 verilator_f.addStep(checkout)
+verilator_f.addStep(steps.ShellCommand(command=['.circleci/build-verilator.sh']))
 
 esp_tools_s = schedulers.Triggerable(name='esp_tools', builderNames=['Build ESP Tools'])
 esp_tools_f = util.BuildFactory()
 esp_tools_f.addStep(checkout)
+esp_tools_f.addStep(steps.ShellCommand(command=['.circleci/build-toolchains.sh', 'esp-tools']))
 
 prep_spawn_s = schedulers.Triggerable(name='prep_spawn', builderNames=['Spawn Prepare Steps'])
 prep_spawn_f = util.BuildFactory()
