added webhook | broken status still

--- a/master.cfg
+++ b/master.cfg
@@ -27,7 +27,7 @@ for w in worker_sets:
     c['workers'].append(worker.Worker(w[0], w[1]))
 
 #----------------------------------------------------------------------
-checkout = steps.Git(repourl='git://github.com/ucb-bar/project-template.git', mode='incremental')
+checkout = steps.Git(repourl='git://github.com/abejgonzalez/chipyard.git', mode='incremental')
 
 # checkout files and get the cached riscv-tools and verilator
 def setup(f):
@@ -127,6 +127,27 @@ example_test_s = schedulers.Triggerable(name='example_test', builderNames=['Exam
 example_test_f = util.BuildFactory()
 example_test_f.addStep(checkout)
 
+builder_names = [
+    'Spawn Jobs',
+    'Build RISC-V Tools', 
+    'Build Verilator', 
+    'Build ESP Tools',
+    'Spawn Prepare Steps',
+    'Prep. Hwacha',
+    'Prep. BOOM',
+    'Prep. BOOM Example',
+    'Prep. BOOM/Rocket Example',
+    'Prep. Rocket Chip',
+    'Prep. Example',
+    'Hwacha Tests',
+    'BOOM Tests',
+    'BOOM Example Tests',
+    'BOOM/Rocket Tests',
+    'Rocket Chip Tests',
+    'Example Tests'
+]
+
+
 c['builders'] = [ \
     util.BuilderConfig(name='Spawn Jobs', factory=spawner_f, workernames=worker_names), \
 
@@ -157,7 +178,13 @@ spawner = schedulers.AnyBranchScheduler( \
     name='spawner', \
     builderNames=['Spawn Jobs'], \
     change_filter = util.ChangeFilter( \
-        project='ucb-bar/project-template'))
+        project='abejgonzalez/chipyard'))
+
+#something = schedulers.SingleBranchScheduler( \
+#    name='chipyard', \
+#    change_filter=util.ChangeFilter(project='abejgonzalez/chipyard', branch='master'), \
+#    treeStableTimer=3, \
+#    builderNames=["Spawn Jobs"])
 
 forcer = schedulers.ForceScheduler( \
     name="force", \
@@ -188,6 +215,8 @@ c['protocols'] = {'pb': {'port': BB_COMMS_PORT}}
 
 #----------------------------------------------------------------------
 c['buildbotURL'] = f'http://localhost:{BB_ADMIN_PORT}/'
+
+c['services'] = reporters.GitHubStatusPush(token='sometoken')
 
 #----------------------------------------------------------------------
 c['www'] = dict(port=BB_ADMIN_PORT, \
